add some opens required to use jersey 2.35, kinesis  and flink