@@ -1355,7 +1355,13 @@
             </systemPropertyVariables>
             <trimStackTrace>false</trimStackTrace>
             <reportFormat>plain</reportFormat>
-            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+            <argLine>
+              --add-opens=java.base/java.nio=ALL-UNNAMED
+              --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+              --add-opens=java.base/java.lang=ALL-UNNAMED
+              --add-opens=java.base/java.util=ALL-UNNAMED
+              --add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
